--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -153,6 +153,28 @@ div {
     display: block;
 }
 
+/* Style Global tables */
+.u-table {
+    width: 100%;
+}
+.u-table thead th {
+    padding: 10px;
+    border-bottom: 1px solid;
+}
+.u-table tr:first-of-type td {
+    padding-top: 10px;
+}
+.u-table th,
+.u-table td {
+    padding: 0 10px;
+}
+.u-table td .reset-icon {
+    font-size: 1.2em;
+}
+.u-table td .u-input {
+    height: 40px;
+}
+
 .kiwi-formatting-extras-quote {
     border: 1px solid #b5b5b5;
     padding: 0 3px;
