- Made the table more compact - Put the icon back next to the status - Remove the 'reset' column - Added in some styles specific to theme

--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -169,7 +169,12 @@ div {
 
 .u-table th,
 .u-table td {
-    padding: 0 10px;
+    padding: 5px 10px;
+}
+
+.u-table td {
+    height: 40px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 .u-table td .reset-icon {
