--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1232,3 +1232,9 @@
     margin-right: 5px;
     font-weight: 100;
 }
+
+.kiwi-settings-advanced-notice {
+    color: #fff;
+    background: none;
+    font-weight: 900;
+}
