--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -996,3 +996,8 @@
     margin-right: 5px;
     font-weight: 100;
 }
+
+.kiwi-settings-advanced-notice {
+    color: #000;
+    border-color: #000;
+}
