--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -1009,3 +1009,9 @@
     margin-right: 5px;
     font-weight: 100;
 }
+
+
+.kiwi-settings-advanced-notice {
+    color: #78c9dc;
+    border-color: #78c9dc;
+}
