- Restyled the notices per theme - Removed some duplicate css - added in a search icon for the filter - removed the label from search input

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -1238,3 +1238,8 @@
     background: none;
     font-weight: 900;
 }
+
+.kiwi-settings-advanced-notice {
+    color: #000;
+    background: #d16c6c;
+}
