--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -1023,6 +1023,6 @@
 }
 
 .kiwi-settings-advanced-notice {
-    color: #747c88;
-    border-color: #747c88;
+    color: #fff;
+    background: #d16c6c;
 }
