--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -155,9 +155,7 @@
 
 .kiwi-appsettings-section {
     background: none;
-    border-right: 1px solid #5dd895;
-    border-bottom: 1px solid #5dd895;
-    border-left: 1px solid #5dd895;
+    border: 1px solid #5dd895;
     color: #5dd895;
 }
 
@@ -1086,5 +1084,5 @@
 
 .kiwi-settings-advanced-notice {
     color: #5dd895;
-    border-color: #5dd895;
+    border: 1px solid #5dd895;
 }
