--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -983,15 +983,19 @@
 }
 
 /* Icons in the Channel List */
-.kiwi-statebrowser-channel[data-name^="#"]::before {
-    content: '\f0c0';
+.kiwi-statebrowser-channel:not([data-name^="#"])::before {
+    content: '\f007';
 }
-.kiwi-statebrowser-channel[data-name^="#help"]::before {
+
+.kiwi-statebrowser-channel[data-name^="*"]::before {
+    content: '\f006';
+}
+
+.kiwi-statebrowser-channel[data-name="#help"]::before {
     content: '\f059';
 }
 
 .kiwi-statebrowser-channel::before {
-    content: '\f007';
     font-family: fontAwesome;
     margin-right: 5px;
     font-weight: 100;
