--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -175,8 +175,9 @@
 .kiwi-channellist table tbody tr {
     border-top: 1px solid lightgray;
 }
-.kiwi-channellist-users {
-    background: #a2846e;
+
+.kiwi-channellist-content-container .u-link {
+    color: #a2846e;
 }
 
 /* Container - Main ( Container.vue )  The majority of styling related to the messages and user input etc */
