--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -179,8 +179,9 @@
 .kiwi-channellist table tbody tr {
     border-top: 1px solid lightgray;
 }
-.kiwi-channellist-users {
-    background: #747c88;
+
+.kiwi-channellist-content-container .u-link {
+    color: #747c88;
 }
 
 /* Container - Main ( Container.vue )  The majority of styling related to the messages and user input etc */
