--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -558,10 +558,10 @@
 
 /* Nicklist ( Nicklist.vu ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
-.kiwi-nicklist-info{
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
+.kiwi-nicklist-user {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .kiwi-nicklist-info input {
     background-color: #fff;
