--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -552,14 +552,10 @@
 
 /* Nicklist ( Nicklist.vu ) */
 .kiwi-nicklist-usercount {
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
-.kiwi-nicklist-info{
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-}
-.kiwi-nicklist-info input {
-    background-color: #fff;
-    color: #000;
+.kiwi-nicklist-user {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 .kiwi-nicklist-user {
     border-top: 1px solid #858585;
@@ -575,10 +571,10 @@
 .kiwi-nicklist-user:after {
     color: #666764;
 }
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick i {
+.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
     color: #fff !important;
 }
-.kiwi-nicklist-user:hover .kiwi-nicklist-user-nick:after {
+.kiwi-nicklist-user:hover .kiwi-nicklist-messageuser {
     color: #fff;
 }
 .kiwi-nicklist-messageuser {
