add style tag to dark theme for issue #503

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -704,6 +704,9 @@
 .kiwi-nicklist-usercount {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
+.kiwi-nicklist-usercount input {
+    color: #dedede;
+}
 .kiwi-nicklist-user {
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
