- Change dark theme primary-button colour to #fff , rather than the hard to read grey colour

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -166,7 +166,7 @@
     background-color: #42b992;
     border: none;
     border-bottom: 1px solid #42b992;
-    color: #dedede;
+    color: #fff;
 }
 
 .u-button-secondary {
