--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -16,6 +16,12 @@ div {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+input,
+textarea,
+select {
+    color: inherit;
+}
+
 .u-link {
     text-decoration: none;
     cursor: pointer;
