added 'kiwi-appsettings-section' to dark and nightswatch to correct Theme selector list
Removed more color and background from .u-form input and textarea selectors from rest of themes.

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -192,6 +192,11 @@
     color: #fff;
 }
 
+.kiwi-appsettings-section {
+    background-color: #272626;
+    color: #969895;
+}
+
 .kiwi-appsettings .u-form label span {
     color: #fff;
 }
