Input font colour fix on the dark theme

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -19,7 +19,8 @@
 
 /* Welcome Screen ( Welcome.vue ) */
 .kiwi-welcome-simple-form,
-.kiwi-customserver-form {
+.kiwi-customserver-form,
+.kiwi-welcome-znc-form {
     background-color: #fff;
     color: #000;
     border: 1px solid #ececec;
