- Changed the Kiwi Settings Icon from a text based link into a simple icon that is displayed in the top left corner

--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -690,6 +690,8 @@
 /* User Settings */
 .kiwi-statebrowser-appsettings {
     border: 1px solid rgba(255, 255, 255, 0.5);
+    border-left: none;
+    border-top: none;
 }
 .kiwi-statebrowser-appsettings:hover {
     background: #a2846e;
