--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -709,6 +709,8 @@
 .kiwi-statebrowser-appsettings {
     border: 1px solid rgba(255, 255, 255, 0.5);
     color: #fff;
+    border-left: none;
+    border-top: none;
 }
 .kiwi-statebrowser-appsettings:hover {
     background: #4d6075;
