--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -725,6 +725,8 @@
 /* User Settings */
 .kiwi-statebrowser-appsettings {
     border: 1px solid #6fffb0;
+    border-left: none;
+    border-top: none;
     color: #6fffb0;
 }
 .kiwi-statebrowser-appsettings:hover {
