--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -289,21 +289,16 @@
 
 
 /* baseline styling for the 'topic' of the channel, if it has one, these are shared between traditional and modern view, but can be made more specific if need be */
-.kiwi-messagelist-message.kiwi-messagelist-message-topic {
-    border-top: 1px solid #a2846e;
-    border-bottom: 1px solid #a2846e;
+.kiwi-message-topic {
+    border: 1px solid #a2846e;
     color: #5f5f5f;
     background: #f5f5f5;
 }
-.kiwi-messagelist-message--modern.kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message-topic {
-    border-top: 2px solid #a2846e;
-}
-.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic {
+
+.kiwi-messagelist--modern .kiwi-message-topic {
     border: 2px solid #a2846e;
 }
-.kiwi-messagelist-message--modern.kiwi-messagelist-message-topic.kiwi-messagelist-message--unread {
-    border-left: 2px solid #a2846e;
-}
+
 .kiwi-header-buffersettings {
     border-top: 1px solid #ddd;
 }
