--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -276,3 +276,46 @@ select {
 .irc-bg-colour-pink { background-color: #f0f; }
 .irc-bg-colour-grey { background-color: #bcbcbc; }
 .irc-bg-colour-light-grey { background-color: #e2e2e2; }
+
+.tooltip-parent {
+    position: relative;
+}
+
+.tooltip-parent:hover .tooltip {
+    opacity: 1;
+    z-index: 1;
+    display: block;
+}
+
+.tooltip {
+    opacity: 0;
+    z-index: -1;
+    display: none;
+    position: absolute;
+    padding: 8px;
+    font-size: 1em;
+    line-height: 20px;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #f1f1f1;
+    width: 150px;
+    border-radius: 2px;
+}
+
+.tooltip.bottom {
+    top: 99%;
+}
+
+.tooltip.top {
+    bottom: 99%;
+}
+
+.tooltip.centre {
+    margin-left: -75px;
+    left: 50%;
+}
+
+.tooltip.right {
+    right: 0;
+    border-radius: 2px 0 0 2px;
+}
