--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -333,6 +333,12 @@
 .kiwi-controlinput-inner .kiwi-controlinput-user {
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
+.kiwi-controlinput-send {
+    background: #f1f1f1;
+}
+.kiwi-controlinput-tools {
+    background: #f1f1f1;
+}
 .kiwi-controlinput-active-tool {
     background: #f6f6f6;
 }
