--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -383,6 +383,15 @@
 .kiwi-controlinput-inner .kiwi-controlinput-user {
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+.kiwi-controlinput-send {
+    background: #3a3a3a;
+    color: inherit;
+}
+.kiwi-controlinput-tools {
+    background: #3a3a3a;
+}
+
 .kiwi-controlinput-active-tool {
     background: #f6f6f6;
 }
