--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -331,6 +331,15 @@
 .kiwi-controlinput-inner .kiwi-controlinput-user {
     border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+.kiwi-controlinput-send {
+    background: #294835;
+    color: inherit;
+}
+.kiwi-controlinput-tools {
+    background: #294835;
+}
+
 .kiwi-controlinput-active-tool {
     background: #5dd895;
 }
