--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -337,10 +337,21 @@
     border-top-color: #d16c6c;
 }
 
+/* Leave channel */
 .kiwi-header-option-leave a:hover,
-.kiwi-header-option-unpinsidebar:hover {
+.kiwi-header-option-unpinsidebar {
     background-color: #d16c6c;
     color: #dedede;
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a {
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a:hover {
+    opacity: 1;
+    background: #d16c6c;
 }
 
 .kiwi-statebrowser-channel-settings,
