--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -252,9 +252,19 @@
 
 /* Leave channel */
 .kiwi-header-option-leave a:hover,
-.kiwi-header-option-unpinsidebar a:hover {
+.kiwi-header-option-unpinsidebar {
     background-color: #d16c6c;
     color: #fff;
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a {
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a:hover {
+    opacity: 1;
+    background: #d16c6c;
 }
 
 /* The link to click if the user has not joined this channel */
