--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -261,9 +261,19 @@
 
 /* Leave channel */
 .kiwi-header-option-leave a:hover,
-.kiwi-header-option-unpinsidebar a:hover {
+.kiwi-header-option-unpinsidebar {
     background-color: #a54d4d;
     color: #fff;
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a {
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a:hover {
+    opacity: 1;
+    background: #a54d4d;
 }
 
 /* The link to click if the user has not joined this channel */
