--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -253,8 +253,19 @@
 
 /* Leave channel */
 .kiwi-header-option-leave a:hover,
+.kiwi-header-option-unpinsidebar {
+    background-color: #6fffb0;
+    color: #fff;
+    opacity: 1;
+}
+
+.kiwi-header-option-unpinsidebar a {
+    opacity: 1;
+}
+
 .kiwi-header-option-unpinsidebar a:hover {
-    background-color: #c54d53;
+    opacity: 1;
+    background: #6fffb0;
     color: #fff;
 }
 
