--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -613,7 +613,8 @@
 
 
 /* MessageInfo */
-.kiwi-messagelist-message--info-open {
+.kiwi-messagelist-message--info-open,
+.kiwi-messagelist-message--authorrepeat.kiwi-messagelist-message--info-open  {
     background-color: rgb(6, 6, 6);
     border-top: 1px solid #909090;
     border-bottom: 1px solid #909090;
