--- a/static/themes/osprey/theme.css
+++ b/static/themes/osprey/theme.css
@@ -81,19 +81,19 @@
 }
 
 /*Style all inputs */
-.input-text {
+.kiwi-input-text {
     background: #fff;
 }
-.input-text-label {
+.kiwi-input-text-label {
     color: gray;
 }
-.input-text--focus {
+.kiwi-input-text--focus {
     border-color: #4d6075;
 }
-.input-text-underline {
+.kiwi-input-text-underline {
     border-color: #a9a9a9;
 }
-.input-text-underline-active {
+.kiwi-input-text-underline-active {
     background: #4d6075;
 }
 .u-form .u-input,
@@ -742,8 +742,8 @@
 .kiwi-network-name-options {
     background-color: #4e5c6b;
 }
-.kiwi-network-name-options .option-button:hover,
-.kiwi-network-name-options .option-button.active {
+.kiwi-network-name-options .kiwi-option-button:hover,
+.kiwi-network-name-options .kiwi-option-button.active {
     background-color: #6a7b8e;
     color: #fff;
 }
