--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -77,19 +77,19 @@
 }
 
 /*Style all inputs */
-.input-text {
+.kiwi-input-text {
     background: #fff;
 }
-.input-text-label {
+.kiwi-input-text-label {
     color: gray;
 }
-.input-text--focus {
+.kiwi-input-text--focus {
     border-color: #42b992;
 }
-.input-text-underline {
+.kiwi-input-text-underline {
     border-color: #a9a9a9;
 }
-.input-text-underline-active {
+.kiwi-input-text-underline-active {
     background: #42b992;
 }
 .u-form .u-input,
@@ -710,12 +710,12 @@
 .kiwi-network-name-options {
     background-color: #131312;
 }
-.kiwi-network-name-options .option-button:hover,
-.kiwi-network-name-options .option-button.active {
+.kiwi-network-name-options .kiwi-option-button:hover,
+.kiwi-network-name-options .kiwi-option-button.active {
     background-color: #42b992;
     color: #fff;
 }
-.kiwi-network-name-options .option-button {
+.kiwi-network-name-options .kiwi-option-button {
     color: #fff;
 }
 
