--- a/static/themes/default/theme.css
+++ b/static/themes/default/theme.css
@@ -710,12 +710,12 @@
 .kiwi-network-name-options {
     background-color: #131312;
 }
-.kiwi-network-name-options .kiwi-option-button:hover,
-.kiwi-network-name-options .kiwi-option-button.active {
+.kiwi-network-name-option:hover,
+.kiwi-network-name-option.active {
     background-color: #42b992;
     color: #fff;
 }
-.kiwi-network-name-options .kiwi-option-button {
+.kiwi-network-name-option {
     color: #fff;
 }
 
