--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -762,8 +762,8 @@
 .kiwi-network-name-options {
     background-color: #5dd895;
 }
-.kiwi-network-name-options .kiwi-option-button:hover,
-.kiwi-network-name-options .kiwi-option-button.active {
+.kiwi-network-name-option:hover,
+.kiwi-network-name-option.active {
     background-color: #6efdb0;
     color: #fff;
 }
