--- a/static/themes/coffee/theme.css
+++ b/static/themes/coffee/theme.css
@@ -72,19 +72,19 @@
 }
 
 /*Style all inputs */
-.kiwi-input-text {
+.u-input-text {
     background: #fff;
 }
-.kiwi-input-text-label {
+.u-input-text-label {
     color: gray;
 }
-.kiwi-input-text--focus {
+.u-input-text--focus {
     border-color: #a2846e;
 }
-.kiwi-input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
-.kiwi-input-text-underline-active {
+.u-input-text-underline-active {
     background: #a2846e;
 }
 .u-form .u-input,
@@ -1009,11 +1009,11 @@
     border: 1px solid #a2846e;
 }
 
-.kiwi-customserver-form .kiwi-input-text {
+.kiwi-customserver-form .u-input-text {
     background-color: #fff;
 }
 
-.kiwi-customserver-form .kiwi-input-text .kiwi-input-text-label {
+.kiwi-customserver-form .u-input-text .u-input-text-label {
     color: #a2846e;
 }
 
