--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -26,7 +26,7 @@
     border: 1px solid #ececec;
 }
 
-.kiwi-welcome-simple-form .kiwi-input-text {
+.kiwi-welcome-simple-form .u-input-text {
     background: #fff;
 }
 
@@ -60,7 +60,7 @@
     color: #000;
 }
 
-.kiwi-welcome-znc .kiwi-input-text {
+.kiwi-welcome-znc .u-input-text {
     background: #fff;
 }
 
@@ -94,23 +94,23 @@
 }
 
 /* Style all inputs */
-.kiwi-input-text {
+.u-input-text {
     background: #dedede;
 }
 
-.kiwi-input-text-label {
+.u-input-text-label {
     color: gray;
 }
 
-.kiwi-input-text--focus {
+.u-input-text--focus {
     border-color: #42b992;
 }
 
-.kiwi-input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
 
-.kiwi-input-text-underline-active {
+.u-input-text-underline-active {
     background: #42b992;
 }
 
@@ -656,7 +656,7 @@
 .kiwi-networksettings input[type='password'],
 .kiwi-networksettings input[type='email'],
 .kiwi-networksettings textarea,
-.kiwi-networksettings .kiwi-input-text input {
+.kiwi-networksettings .u-input-text input {
     background: rgb(62, 62, 62);
     color: #fff;
 }
@@ -671,7 +671,7 @@
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
-.kiwi-networksettings .u-form .kiwi-input-text {
+.kiwi-networksettings .u-form .u-input-text {
     background: none;
 }
 
@@ -1205,11 +1205,11 @@
     border: 1px solid #a2846e;
 }
 
-.kiwi-customserver-form .kiwi-input-text {
+.kiwi-customserver-form .u-input-text {
     background-color: #fff;
 }
 
-.kiwi-customserver-form .kiwi-input-text .kiwi-input-text-label {
+.kiwi-customserver-form .u-input-text .u-input-text-label {
     color: #42b992;
 }
 
