--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -73,19 +73,19 @@
 }
 
 /*Style all inputs */
-.kiwi-input-text {
+.u-input-text {
     background: #fff;
 }
-.kiwi-input-text-label {
+.u-input-text-label {
     color: gray;
 }
-.kiwi-input-text--focus {
+.u-input-text--focus {
     border-color: #747c88;
 }
-.kiwi-input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
-.kiwi-input-text-underline-active {
+.u-input-text-underline-active {
     background: #747c88;
 }
 .u-form .u-input,
