--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -74,19 +74,19 @@
 }
 
 /*Style all inputs */
-.kiwi-input-text {
+.u-input-text {
     background: #fff;
 }
-.kiwi-input-text-label {
+.u-input-text-label {
     color: #6fffb0;
 }
-.kiwi-input-text--focus {
+.u-input-text--focus {
     border-color: #1b2f24;
 }
-.kiwi-input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
-.kiwi-input-text-underline-active {
+.u-input-text-underline-active {
     background: #1b2f24;
 }
 .u-form .u-input,
@@ -1052,11 +1052,11 @@
     border: 1px solid #6fffb0;
 }
 
-.kiwi-customserver-form .kiwi-input-text {
+.kiwi-customserver-form .u-input-text {
     background-color: #151414;
 }
 
-.kiwi-customserver-form .kiwi-input-text input {
+.kiwi-customserver-form .u-input-text input {
     background-color: #151414;
     color: #fff;
 }
