--- a/static/themes/sky/theme.css
+++ b/static/themes/sky/theme.css
@@ -71,19 +71,19 @@
 }
 
 /*Style all inputs */
-.kiwi-input-text {
+.u-input-text {
     background: #fff;
 }
-.kiwi-input-text-label {
+.u-input-text-label {
     color: gray;
 }
-.kiwi-input-text--focus {
+.u-input-text--focus {
     border-color: #78c9dc;
 }
-.kiwi-input-text-underline {
+.u-input-text-underline {
     border-color: #a9a9a9;
 }
-.kiwi-input-text-underline-active {
+.u-input-text-underline-active {
     background: #78c9dc;
 }
 .u-form .u-input,
